--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,5 @@ management.servlet.context-path=/manage
 management.health.db.enabled=true
 management.health.default.enabled=true
 management.health.diskspace.enabled=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
