FIX : 파라미터 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,6 +61,7 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 #file upload
 spring.servlet.multipart.file-size-threshold=1MB
 spring.servlet.multipart.location=C:/Users/TWIM/Desktop/Git/imageUpload/
+#spring.servlet.multipart.location=/Users/ps/Workspace/twim_2week/imageUpload/
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
