--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -151,10 +151,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
 
-	implementation ('io.socket:socket.io-client:2.1.0') {
-		// excluding org.json which is provided by Android
-		exclude group: 'org.json', module: 'json'
-	}
+	implementation ('io.socket:socket.io-server:4.0.1')
 }
 
 test {
