FEAT : 소켓통신 서버

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -67,4 +67,7 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 
+#socket.io config
+socket.io.host=127.0.0.1
+socket.io.port=9999
 
