--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -151,6 +151,15 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
 
+	implementation ('io.socket:socket.io-server:4.0.1')
+
+	// https://mvnrepository.com/artifact/com.corundumstudio.socketio/netty-socketio
+	implementation group: 'com.corundumstudio.socketio', name: 'netty-socketio', version: '1.7.17'
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.7.1'
+
+
 
 }
 
