--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,6 +39,9 @@ repositories {
 	maven { url "https://repo.spring.io/libs-release" }
 	maven { url "https://repo.maven.apache.org/maven2" }
 	maven { url "https://build.shibboleth.net/nexus/content/repositories/releases" }
+	maven {
+		url "https://jcenter.bintray.com"
+	}
 }
 group = 'jpabook'
 version = '0.0.1-SNAPSHOT'
@@ -150,6 +153,13 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
+
+//	// https://mvnrepository.com/artifact/javagrinko/tcp-spring-boot-starter
+//	implementation 'javagrinko:tcp-spring-boot-starter:1.12'
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor
+	implementation 'org.springframework.boot:spring-boot-configuration-processor:2.7.1'
+
 
 }
 
