--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -68,3 +68,5 @@ spring.servlet.multipart.max-request-size=100MB
 
 
 
+passbook.pawnshop.tcp-server.port      = 9999
+passbook.pawnshop.tcp-server.auto-start = true
