--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -144,7 +144,7 @@ dependencies {
 
 	implementation('org.springframework.boot:spring-boot-starter-validation:2.7.0')
 
-//	testCompile('org.springframework.boot:spring-boot-starter-test:2.7.0')
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
 
 	// jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -154,12 +154,11 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
 
-//	// https://mvnrepository.com/artifact/javagrinko/tcp-spring-boot-starter
-//	implementation 'javagrinko:tcp-spring-boot-starter:1.12'
-
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor
 	implementation 'org.springframework.boot:spring-boot-configuration-processor:2.7.1'
 
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
 }
 
